Added app icon and onboarding pages

--- a/greenomedia/pubspec.yaml
+++ b/greenomedia/pubspec.yaml
@@ -45,10 +45,16 @@ dependencies:
   razorpay_flutter: ^1.2.2
   fluttertoast: ^7.0.1+1
   page_transition: "^1.1.6"
+  introduction_screen:
+  flutter_launcher_icons: ^0.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_icons:    
+ android: "launcher_icon"    
+ ios: true    
+ image_path: "images/Logo.jpeg"   
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -100,7 +106,11 @@ flutter:
     - images/girl11.jpeg
     - images/girl12.jpeg
     - images/girl13.jpeg
-
+    - images/awareness.png
+    - images/communitynew.png
+    - images/credits.png
+    - images/eco.png
+    - images/many.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -126,3 +136,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+module:
+  androidX: true
