--- a/greenomedia/pubspec.yaml
+++ b/greenomedia/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  animated_text_kit: ^3.1.0
   hexcolor: ^1.0.6
   neumorphic: ^0.4.0 
   geolocator:
@@ -72,6 +73,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/q.webp
+    - images/Logo.jpeg
     - images/google.jpg
     - images/Location.gif
     - images/tree.png
@@ -83,6 +86,9 @@ flutter:
     - images/blog.jpg
     - images/donate.jpg
     - images/group.jpg
+    - images/gfl.jpg
+    - images/la.jpg
+    - images/u.jpg
     - images/combo.jpeg
     - images/Soil.jpeg
     - images/seeds.jpeg
